# ChatterPal

./: .env.example  .gitignore  README.md  pyproject.toml  tests_syntax_errors.txt
.config/chatterpal/: user_preferences.json
.config/chatterpal/oralcounsellor/: user_preferences.json
config/: chat_config.yaml
data/configs/: .gitkeep
docs/: README.md  api.md  chat_module_user_guide.md  correction_system_overview.md  deployment.md  development.md  project_architecture.md  pronunciation_correction_design.md  technical_implementation_summary.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AudioRecorder.tsx  ChatInterface.tsx  MessageBubble.tsx  PronunciationCorrection.tsx
scripts/: __init__.py  compare_tts_services.py  debug_alibaba_tts.py  debug_encoding_issue.py  final_encoding_test.py  final_tts_verification.py  fix_chinese_encoding.py  fix_encoding.py  force_utf8_encoding.py  run.bat  run.py  run.sh  run_api.py  run_integration_tests.py  setup.bat  setup.py  setup.sh  test_alibaba_bailian.py  test_chat_encoding.py  test_chat_service.py  test_deployment.py  test_openai_compatible.py  test_prompt.py  test_topic_integration.py  test_tts_integration.py  test_web_chat.py  verify_deployment_config.py  verify_project.py
src/chatterpal/: __init__.py
src/chatterpal/config/: __init__.py  loader.py  settings.py
src/chatterpal/core/: __init__.py
src/chatterpal/core/asr/: whisper.py
src/chatterpal/core/assessment/: base.py  phoneme.py
src/chatterpal/core/llm/: alibaba.py  base.py  openai.py
src/chatterpal/core/tts/: __init__.py  base.py  edge.py  google_tts.py
src/chatterpal/services/: ai_correction.py  chat.py  correction.py  evaluation.py  topic_generator.py
src/chatterpal/utils/: __init__.py  audio.py  cache.py  encoding_fix.py  logger.py  preferences.py
src/chatterpal/web/: __init__.py  api_server.py  app.py
src/chatterpal/web/components/: __init__.py  chat_tab.py  correct_tab.py  score_tab.py
src/chatterpal/web/utils/: __init__.py
src/oralcounsellor/: __init__.py
src/oralcounsellor/config/: __init__.py  loader.py  settings.py
src/oralcounsellor/core/: __init__.py  errors.py
src/oralcounsellor/core/asr/: __init__.py  aliyun.py  base.py
src/oralcounsellor/core/assessment/: __init__.py  corrector.py  prosody.py
src/oralcounsellor/core/llm/: __init__.py  openai.py
src/oralcounsellor/core/tts/: alibaba.py
src/oralcounsellor/services/: __init__.py  chat_config.py  evaluation.py
src/oralcounsellor/utils/: __init__.py  audio_optimizer.py  logger.py  preferences.py  text.py
src/oralcounsellor/web/: __init__.py  api_server.py  app.py
src/oralcounsellor/web/components/: correct_tab.py  score_tab.py
tests/: __init__.py  conftest.py  test_app_startup.py  test_asr.py  test_asr_enhanced.py  test_assessment.py  test_audio_controls.py  test_audio_processor.py  test_chat_config.py  test_chat_tab_interactions.py  test_config.py  test_core_functionality_only.py  test_end_to_end_chat_flows.py  test_error_handling.py  test_error_scenarios_integration.py  test_final_verification.py  test_functionality_verification.py  test_history_management.py  test_integrated_error_handling.py  test_llm.py  test_performance.py  test_performance_and_ux.py  test_real_functionality.py  test_runner.py  test_services.py  test_topic_error_handling.py  test_topic_integration.py  test_tts.py  test_tts_enhanced.py  test_tts_error_handling.py  test_user_preferences.py  test_web_components.py
